lab-03 in progress

--- a/lab-03-yummy/src/main/resources/application.properties
+++ b/lab-03-yummy/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+author.name = Mike
+author.surname = Smith
+author.phone = 123432123
+author.socialMedia = face-mike, ig-mike, tweet-mike
+author.email = mike1@cydeo.com
