Lab-09 - Consuming APIs done

--- a/lab-08-REST/src/main/resources/application.properties
+++ b/lab-08-REST/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+access_key=b95bf4595a674eeb829906ce9819e8d4
